Fixes and examples.
