# src/IO.Swagger/Controllers/DefaultApi.cs
@@ -516,7 +516,7 @@ namespace IO.Swagger.Controllers
             // return StatusCode(200, default(IdentificacaoResp));
 
             string exampleJson = null;
-            exampleJson = "{\n  \"InfIdentificacao\" : {\n    \"pedirToken\" : \"01\",\n    \"frase\" : \"Informe o token gerado em seu app:\",\n    \"perguntas\" : [ {\n      \"pergunta\" : \"Qual é o dia de seu aniversário?\",\n      \"resposta\" : \"\",\n      \"tamResposta\" : \"2\",\n      \"id\" : \"1\"\n    }, {\n      \"pergunta\" : \"Qual é o dia de seu aniversário?\",\n      \"resposta\" : \"\",\n      \"tamResposta\" : \"2\",\n      \"id\" : \"1\"\n    } ],\n    \"idPositiva\" : [ {\n      \"pos8\" : \"Qab-Wb-Ie-Ewi\",\n      \"idTela\" : \"1\",\n      \"pos4\" : \"Qab-Wb-Ie-Ewi\",\n      \"pos5\" : \"Qab-Wb-Ie-Ewi\",\n      \"pos6\" : \"Qab-Wb-Ie-Ewi\",\n      \"pos7\" : \"Qab-Wb-Ie-Ewi\",\n      \"pos1\" : \"Qab-Wb-Ie-Ewi\",\n      \"pos2\" : \"Qab-Wb-Ie-Ewi\",\n      \"pos3\" : \"Qab-Wb-Ie-Ewi\"\n    }, {\n      \"pos8\" : \"Qab-Wb-Ie-Ewi\",\n      \"idTela\" : \"1\",\n      \"pos4\" : \"Qab-Wb-Ie-Ewi\",\n      \"pos5\" : \"Qab-Wb-Ie-Ewi\",\n      \"pos6\" : \"Qab-Wb-Ie-Ewi\",\n      \"pos7\" : \"Qab-Wb-Ie-Ewi\",\n      \"pos1\" : \"Qab-Wb-Ie-Ewi\",\n      \"pos2\" : \"Qab-Wb-Ie-Ewi\",\n      \"pos3\" : \"Qab-Wb-Ie-Ewi\"\n    } ],\n    \"transacValidas\" : \"068101068010\",\n    \"saldo\" : \"000000005000\"\n  },\n  \"InfTransacao\" : {\n    \"cdProc\" : \"029100\",\n    \"mensagemCliente\" : \"\",\n    \"nsu\" : \"000080247206\",\n    \"codMoeda\" : \"986\",\n    \"codOperadora\" : \"00000000914\",\n    \"dataLocal\" : \"1122\",\n    \"errorMessage\" : \"\",\n    \"valor\" : \"5000\",\n    \"horaLocal\" : \"151032\",\n    \"nsuResposta\" : \"820\",\n    \"dataHora\" : \"1122151032\"\n  },\n  \"Cripto\" : {\n    \"hash\" : \"hash\"\n  },\n  \"Terminal\" : {\n    \"codEstab\" : \"000000000742673\",\n    \"tipo\" : \"008\",\n    \"id\" : \"05100004\"\n  }\n}";
+            exampleJson = "{\n  \"InfIdentificacao\" : {\n    \"pedirToken\" : \"01\",\n    \"frase\" : \"Informe o token gerado em seu app:\",\n    \"perguntas\" : [ {\n      \"pergunta\" : \"Qual é o dia de seu aniversário?\",\n      \"tamResposta\" : \"2\",\n      \"id\" : \"1\"\n    }, {\n      \"pergunta\" : \"Qual é o dia de seu aniversário?\",\n      \"tamResposta\" : \"2\",\n      \"id\" : \"1\"\n    } ],\n    \"idPositiva\" : [ {\n      \"pos8\" : \"4E-8G-1P\",\n      \"idTela\" : \"1\",\n      \"pos4\" : \"P1-G8-E4\",\n      \"pos5\" : \"REG SOS\",\n      \"pos6\" : \"EN/UQ/AM\",\n      \"pos7\" : \"69 05 41\",\n      \"pos1\" : \"SOS GER\",\n      \"pos2\" : \"MA/QU/NE\",\n      \"pos3\" : \"14 50 96\"\n    }, {\n      \"pos8\" : \"4E-8G-1P\",\n      \"idTela\" : \"1\",\n      \"pos4\" : \"P1-G8-E4\",\n      \"pos5\" : \"REG SOS\",\n      \"pos6\" : \"EN/UQ/AM\",\n      \"pos7\" : \"69 05 41\",\n      \"pos1\" : \"SOS GER\",\n      \"pos2\" : \"MA/QU/NE\",\n      \"pos3\" : \"14 50 96\"\n    } ],\n    \"transacValidas\" : \"068101068010\",\n    \"saldo\" : \"000000005000\"\n  },\n  \"InfTransacao\" : {\n    \"cdProc\" : \"029100\",\n    \"mensagemCliente\" : \"\",\n    \"nsu\" : \"000080247206\",\n    \"codMoeda\" : \"986\",\n    \"codOperadora\" : \"00000000914\",\n    \"dataLocal\" : \"1122\",\n    \"errorMessage\" : \"\",\n    \"valor\" : \"5000\",\n    \"horaLocal\" : \"151032\",\n    \"nsuResposta\" : \"820\",\n    \"dataHora\" : \"1122151032\"\n  },\n  \"Cripto\" : {\n    \"hash\" : \"hash\"\n  },\n  \"Terminal\" : {\n    \"codEstab\" : \"000000000742673\",\n    \"tipo\" : \"008\",\n    \"id\" : \"05100004\"\n  }\n}";
             
             var example = exampleJson != null
             ? JsonConvert.DeserializeObject<IdentificacaoResp>(exampleJson)
